samples/_failures_safe/1761720757_2998a1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_198d00c1.c: In function ‘tokenize’:
./samples/SAFE/__tmp_198d00c1.c:163:9: error: expected declaration or statement at end of input
  163 |         token_count++;
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_198d00c1.c:163:9: error: expected declaration or statement at end of input
